@@ -134,7 +134,7 @@ DIST mozilla-firefox-3.0.8-zh-TW.xpi 121795 RMD160 90e684882a248a8e324835833ce56
 DIST mozilla-firefox-3.0.8.tar.bz2 11580298 RMD160 7b82188eb02513e6b51a04141a11754053ae155b SHA1 2215b645e5eec6547de02279658f5f69591ee336 SHA256 21f8b40d620726a462b7a2aaf948fc497b7f0c88a0161f998749780249f9df6a
 DIST xulrunner-1.9.0.10.tar.bz2 34167778 RMD160 96ca5c569bbee78924c6e9cb5fea660870a8c096 SHA1 926d9042557e2d767db91b1d183327713fb090d3 SHA256 fe4091f4de50278567b4e26effea66a998dd41f455077e1e37cff8b3417a8f34
 DIST xulrunner-1.9.0.8.tar.bz2 34169400 RMD160 5b04b74bedfe6cdc023248b6b8e7b8a1a72499a2 SHA1 99adcd31779105778d03b2cfdbe59fb1d3607f7e SHA256 ac1dad103922f8c11f4f88174f21acd841e5a7fcb40ac9702707b59f0a287960
-EBUILD mozilla-firefox-3.0.10.ebuild 9887 RMD160 3dcdafd21db684a05417cbfba9efcde4a4227a1b SHA1 d37798969f56b8d37f5f08821cb83b370504612c SHA256 85c7a8ce1388ffcf4e6b3ec1930a3cb68229cbe6355881412fb48ba8548ce86a
+EBUILD mozilla-firefox-3.0.10.ebuild 9518 RMD160 2f6c114707163e0abcc21146834c71d34fa3a55b SHA1 5f68ec0bf559846670cdf9e5a2753c269a8cc83b SHA256 314284afc5bce616955029126fc20defc2dd079b3a85540d3640d38364c21c25
 EBUILD mozilla-firefox-3.0.8.ebuild 10294 RMD160 661c273f82cb39d3d54da020fe2a18b6235552f3 SHA1 d7949bc1b85cfd93dabad32aca43b7b5477a1672 SHA256 807afdeae6da0a8cced0e5e856a0f7d31807ad0b4c3af112ab8dee79a67a0b60
-MISC ChangeLog 96744 RMD160 86ad79c1180f94332ce944d078ca3c329b008c9b SHA1 8869a3bb373a3f595fdf9db5bbd83a347e8bf1f0 SHA256 84d0ac3b8d7e2243906eedc7b6e6e408d05e75baa9c5563addfcdda685985f79
+MISC ChangeLog 97026 RMD160 4d7b7348170a9bd5fd79f513f40abdcfae374254 SHA1 a75ed6aac640d96d4086e76008ee3ae5e26cff7e SHA256 a1c9f612f1cf499de8a92aef5a15fa32f5f187d5499dc2059c9e6dd5399aeb4a
 MISC metadata.xml 860 RMD160 3197904ba75329ac8d603f9791471197f9f0d4ef SHA1 0607acccaa05ff9e533a2d505276b93a45a6cfb0 SHA256 86373386dfeed1a3bf14da81d88c924440f93ed7716f91cbeb0c9249a4577387
