@@ -1,6 +1,15 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.505 2009/04/30 17:19:24 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.507 2009/05/01 23:24:30 nirbheek Exp $
+
+  01 May 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
+  mozilla-firefox-3.0.10:
+  Keeping the pkg_preinst is causing more problems than removing it, such as
+  bug 267363
+
+  01 May 2009; Markus Meier <maekke@gentoo.org>
+  mozilla-firefox-3.0.10.ebuild:
+  amd64 stable, bug #267234
 
   30 Apr 2009; Raúl Porcel <armin76@gentoo.org>
   mozilla-firefox-3.0.10.ebuild:
